<resources>
    <string name="app_name">TFGIdiomas</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="no_cuenta">¿No tienes cuenta?</string>
    <string name="signin">Regístrate</string>
    <string name="Login_rrss">O inicia sesión con...</string>
    <string name="recuerdame">Recordar</string>
    <string name="que_idioma">¿Qué idioma vas a empezar a estudiar?</string>
    <string name="idioma">Idioma</string>
    <string name="aceptar">Aceptar</string>
    <string name="repetir_pass">Repetir contraseña</string>
    <string name="add_word">Añadir palabra</string>
    <string name="colecciones">Colecciones</string>
    <string name="practica">Practica</string>
    <string name="perfil">Perfil</string>
    <string name="palabra">Palabra</string>
    <string name="traduccion">Traducción</string>
    <string name="sustantivo">Sustantivo</string>
    <string name="adjetivo">Adjetivo</string>
    <string name="verbo">Verbo</string>
    <string name="determinante">Determinante</string>
    <string name="pronombre">Pronombre</string>
    <string name="adverbio">Adverbio</string>
    <string name="preposicion">Preposición</string>
    <string name="conjuncion">Conjunción</string>
    <string name="a_que_coleccion">¿A qué colección quieres añadirla?</string>
    <string name="nueva_coleccion">"Nueva colección"</string>
    <string name="nombre_nueva_coleccion">¿Qué nombre tendrá la colección?</string>
    <string name="confirmacion_eliminar">¿Quiere eliminar *x* de la colección?</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="solo">Solo</string>
    <string name="multijugador">Multijugador</string>
    <string name="test">Test</string>
    <string name="extraño">El intruso</string>
    <string name="juego3">Desordenado</string>
    <string name="que_significa">¿Qué significa...?</string>
    <string name="como_se_escribe">¿Cómo se escribe...?</string>
    <string name="buen_intento">¡Buen intento!</string>
    <string name="Wordle">Wordle</string>
    <string name="que_palabra_es">¿Qué palabra es?</string>
    <string name="confirmar_intento">Confirmar intento</string>
    <string name="intentos_wordle_completados">¡Te has quedado sin intentos!</string>
    <string name="wordle_conseguido">¡Has adivinado la palabra!</string>
    <string name="se_puede_mejorar">Se puede mejorar...</string>
    <string name="ponte_las_pilas">¡Ponte las pilas!</string>
    <string name="eliminar_coleccion">¿Quiere eliminar la colección *x*?</string>
    <string name="no_hay_palabras">No hay palabras en esta colección</string>
    <string name="no_hay_colecciones">No hay colecciones en este idioma</string>
</resources>