<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_add_palabra"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/palabra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.00999999">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_add_palabra"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapSentences"
            android:textSize="24sp">

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_add_traduccion"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/traduccion"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/til_add_palabra"
        app:layout_constraintStart_toStartOf="@+id/til_add_palabra"
        app:layout_constraintTop_toBottomOf="@+id/til_add_palabra">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_add_traduccion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapSentences"
            android:textSize="24sp">

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rg_tipo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_add_traduccion">

        <RadioButton
            android:id="@+id/rb_sustantivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sustantivo"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rb_adjetivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adjetivo"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rb_verbo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verbo"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rb_adverbio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adverbio"
            android:textSize="18sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rg_tipo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rg_tipo1">

        <RadioButton
            android:id="@+id/rb_determinante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/determinante"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rb_pronombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pronombre"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rb_preposicion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preposicion"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rb_conjuncion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conjuncion"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/a_que_coleccion"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_tipo1" />

    <Spinner
        android:id="@+id/add_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.06999999" />

    <Button
        android:id="@+id/add_palabra_add_coleccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="aAddColeccion"
        android:text="@string/nueva_coleccion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_spinner"
        app:layout_constraintVertical_bias="0.120000005" />

    <ImageButton
        android:id="@+id/ib_editar_add_palabra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_add_btn"
        android:onClick="executePalabra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/add_palabra_add_coleccion"
        app:layout_constraintStart_toStartOf="@+id/add_palabra_add_coleccion"
        app:layout_constraintTop_toBottomOf="@+id/add_palabra_add_coleccion"
        app:layout_constraintVertical_bias="0.47000003" />


</androidx.constraintlayout.widget.ConstraintLayout>