<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/tv_confirmar_eliminar_palabra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmacion_eliminar"
        android:textSize="18sp"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="30dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmar"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:onClick="eliminarPalabra"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                android:layout_alignParentRight="true"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:onClick="eliminarPalabra"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>