<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_jugar_juego1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:onClick="aTest"
        android:text="@string/test"
        android:textSize="24sp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19"
        tools:layout_editor_absoluteX="24dp">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_jugar_juego2"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:onClick="aIntruso"
        android:text="@string/extraño"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_jugar_juego1"
        app:layout_constraintStart_toStartOf="@+id/btn_jugar_juego1"
        app:layout_constraintTop_toBottomOf="@+id/btn_jugar_juego1"
        app:layout_constraintVertical_bias="0.110000014">

    </com.google.android.material.button.MaterialButton>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_jugar_juego3"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:onClick="aDesordenado"
        android:text="@string/juego3"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_jugar_juego2"
        app:layout_constraintStart_toStartOf="@+id/btn_jugar_juego2"
        app:layout_constraintTop_toBottomOf="@+id/btn_jugar_juego2"
        app:layout_constraintVertical_bias="0.167">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_jugar_juego4"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:onClick="aWordle"
        android:text="@string/Wordle"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_jugar_juego3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_jugar_juego3"
        app:layout_constraintTop_toBottomOf="@+id/btn_jugar_juego3"
        app:layout_constraintVertical_bias="0.28">

    </com.google.android.material.button.MaterialButton>

</androidx.constraintlayout.widget.ConstraintLayout>