<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/wordle_ext_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/et_wordle_intento"
        app:layout_constraintTop_toTopOf="parent"
        android:weightSum="5">

    </LinearLayout>

    <EditText
        android:id="@+id/et_wordle_intento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/que_palabra_es"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.863" />

    <Button
        android:id="@+id/btn_comprobar_intento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="comprobarIntento"
        android:text="@string/confirmar_intento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_wordle_intento"
        app:layout_constraintStart_toStartOf="@+id/et_wordle_intento"
        app:layout_constraintTop_toBottomOf="@+id/et_wordle_intento"
        app:layout_constraintVertical_bias="0.19999999" />

    <TextView
        android:id="@+id/tv_intentos_wordle_completados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intentos_wordle_completados"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordle_ext_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>