<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="20">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center">

        <TextView
            android:id="@+id/principal_presentacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="center"
            android:textSize="18sp"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="13"
        android:orientation="vertical"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="20dp"
            android:onClick="aAddPalabra"
            android:text="@string/add_word"
            android:textSize="28sp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/colecciones"
            android:textSize="28sp"
            android:layout_marginBottom="20dp"
            android:onClick="aColecciones"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/practica"
            android:textSize="28sp"
            android:layout_marginBottom="20dp"
            android:onClick="aPractica"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/perfil"
            android:textSize="28sp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:onClick="aPerfil"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_languages_btn"
            android:onClick="aIdioma"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/people"
            android:onClick="aUsuario"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>